Definindo banco de dados e imagem no docker
Signed-off-by: Matheus Maciel <eumatheusmaciel@gmail.com>

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,10 @@
 spring.application.name=certification
 server.port=8085
+
+# Database PostgreSQL
+spring.datasource.url=jdbc:postgresql://localhost:5432/certification
+spring.datasource.username=postgres
+spring.datasource.password=postgres
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=update
