--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 HELP.md
+*.txt
 target/
 !.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
@@ -31,4 +32,3 @@ build/
 
 ### VS Code ###
 .vscode/
-.txt
